// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correct css for child: false, state: false, theme: dark and additionalDefaultJssStyle: %o 1`] = `
Object {
  "clip": "auto",
  "clipPath": "none",
  "color": "#fff",
  "cursor": "pointer",
  "display": "inline-block",
  "height": "auto",
  "margin": 0,
  "order": 1,
  "outline": "none",
  "overflow": "visible",
  "padding": "0 0 0 0.5rem",
  "position": "static",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`should return correct css for child: false, state: false, theme: dark and additionalDefaultJssStyle: %o 2`] = `
Object {
  "clip": "auto",
  "clipPath": "none",
  "color": "#fff",
  "cursor": "pointer",
  "display": "inline-block",
  "height": "auto",
  "margin": 0,
  "order": 1,
  "outline": "none",
  "overflow": "visible",
  "padding": "0 0 0 0.5rem",
  "position": "static",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`should return correct css for child: false, state: true, theme: dark and additionalDefaultJssStyle: %o 1`] = `
Object {
  "border": "0",
  "clip": "rect(1px,1px,1px,1px)",
  "clipPath": "inset(50%)",
  "color": "#fff",
  "cursor": "pointer",
  "display": "inline-block",
  "height": "1px",
  "margin": "-1px",
  "order": 1,
  "outline": "none",
  "overflow": "hidden",
  "padding": "0 0 0 0.5rem",
  "position": "absolute",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "nowrap",
  "width": "auto",
}
`;

exports[`should return correct css for child: false, state: true, theme: light and additionalDefaultJssStyle: %o 1`] = `
Object {
  "border": "0",
  "clip": "rect(1px,1px,1px,1px)",
  "clipPath": "inset(50%)",
  "color": "#000",
  "cursor": "pointer",
  "display": "inline-block",
  "height": "1px",
  "margin": "-1px",
  "order": 1,
  "outline": "none",
  "overflow": "hidden",
  "padding": "0 0 0 0.5rem",
  "position": "absolute",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "nowrap",
  "width": "auto",
}
`;

exports[`should return correct css for child: true, state: { base: true, xs: false, s: true, m: false, l: true, xl: false }, theme: light and additionalDefaultJssStyle: %o 1`] = `
Object {
  "@media (min-width: 1000px)": Object {
    "clip": "auto",
    "clipPath": "none",
    "height": "auto",
    "margin": 0,
    "overflow": "visible",
    "padding": "0 0 0 0.5rem",
    "position": "static",
    "whiteSpace": "normal",
    "width": "auto",
  },
  "@media (min-width: 1300px)": Object {
    "border": "0",
    "clip": "rect(1px,1px,1px,1px)",
    "clipPath": "inset(50%)",
    "height": "1px",
    "margin": "-1px",
    "overflow": "hidden",
    "padding": "0 0 0 0.5rem",
    "position": "absolute",
    "whiteSpace": "nowrap",
    "width": "auto",
  },
  "@media (min-width: 1760px)": Object {
    "clip": "auto",
    "clipPath": "none",
    "height": "auto",
    "margin": 0,
    "overflow": "visible",
    "padding": "0 0 0 0.5rem",
    "position": "static",
    "whiteSpace": "normal",
    "width": "auto",
  },
  "@media (min-width: 480px)": Object {
    "clip": "auto",
    "clipPath": "none",
    "height": "auto",
    "margin": 0,
    "overflow": "visible",
    "padding": "0 0 0 0.5rem",
    "position": "static",
    "whiteSpace": "normal",
    "width": "auto",
  },
  "@media (min-width: 760px)": Object {
    "border": "0",
    "clip": "rect(1px,1px,1px,1px)",
    "clipPath": "inset(50%)",
    "height": "1px",
    "margin": "-1px",
    "overflow": "hidden",
    "padding": "0 0 0 0.5rem",
    "position": "absolute",
    "whiteSpace": "nowrap",
    "width": "auto",
  },
  "border": "0",
  "clip": "rect(1px,1px,1px,1px)",
  "clipPath": "inset(50%)",
  "color": "#96989a",
  "cursor": "default",
  "display": "inline-block",
  "height": "1px",
  "margin": "-1px",
  "order": 1,
  "outline": "none",
  "overflow": "hidden",
  "padding": "0 0 0 0.5rem",
  "position": "absolute",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "nowrap",
  "width": "auto",
}
`;

exports[`should return correct css for child: true, state: false, theme: light and additionalDefaultJssStyle: %o 1`] = `
Object {
  "clip": "auto",
  "clipPath": "none",
  "color": "#96989a",
  "cursor": "default",
  "display": "inline-block",
  "height": "auto",
  "margin": 0,
  "order": 1,
  "outline": "none",
  "overflow": "visible",
  "padding": "0 0 0 0.5rem",
  "position": "static",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`should return correct css for child: true, state: false, theme: light and additionalDefaultJssStyle: %o 2`] = `
Object {
  "clip": "auto",
  "clipPath": "none",
  "color": "#96989a",
  "cursor": "default",
  "display": "inline-block",
  "height": "auto",
  "margin": 0,
  "order": 1,
  "outline": "none",
  "overflow": "visible",
  "padding": "0 0 0 0.5rem",
  "position": "static",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`should return correct css for child: true, state: true, theme: dark and additionalDefaultJssStyle: %o 1`] = `
Object {
  "border": "0",
  "clip": "rect(1px,1px,1px,1px)",
  "clipPath": "inset(50%)",
  "color": "#7c7f81",
  "cursor": "default",
  "display": "inline-block",
  "height": "1px",
  "margin": "-1px",
  "order": 1,
  "outline": "none",
  "overflow": "hidden",
  "padding": "0 0 0 0.5rem",
  "position": "absolute",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "nowrap",
  "width": "auto",
}
`;

exports[`should return correct css for child: true, state: true, theme: light and additionalDefaultJssStyle: %o 1`] = `
Object {
  "border": "0",
  "clip": "rect(1px,1px,1px,1px)",
  "clipPath": "inset(50%)",
  "color": "#96989a",
  "cursor": "default",
  "display": "inline-block",
  "height": "1px",
  "margin": "-1px",
  "order": 1,
  "outline": "none",
  "overflow": "hidden",
  "padding": "0 0 0 0.5rem",
  "position": "absolute",
  "transition": "color var(--p-transition-duration, .24s) ease",
  "whiteSpace": "nowrap",
  "width": "auto",
}
`;
